@@ -27,3 +27,4 @@ A0.5   2020-02-22: dwd12admin: -x to copy a common volume to be a secret volume
 A0.6   2020-02-27: dwd12admin: -i to install a set in current directory
 A0.7   2022-11-05: dwd12: documentation for shdoc
 A0.8   2022-11-05: dwd12 translated to pt_BR (using gettext)
+A0.9   2022-11-05: Makefile fixed to install pt_BR translation
